General design completed

--- a/style.css
+++ b/style.css
@@ -1,4 +1,181 @@
 body {
+    background-color: #000; 
+    color: #F5F5F5;
     margin: 0;
     padding: 0;
+}
+
+header {
+    text-align: center;
+    background-color: #333333;
+}
+
+.header {
+    margin: 0;
+    padding: 15px;
+    color: beige;
+}
+
+section {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    width: 550px;
+    height: 720px;
+    background-color: #1F2937;
+
+}
+
+.top {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 190px;
+    background: #3A69D2;  
+    color: #fff;
+    font-family:'Inter', sans-serif;
+
+}
+
+.heading {
+    margin-bottom: 0;
+    font-weight: 800;
+}
+
+.sup-text {
+    font-weight: 400;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.choise-btn {
+    width: 143.17px;
+    height: 45px;
+    background: #D1D4F4;
+    border: 2px solid #FFFFFF;
+    border-radius: 7px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #4A4E74;
+    cursor: pointer;
+}
+
+.choise-btn:hover {
+    background: #b2b5c9;
+}
+
+.tasks {
+    margin: 10px 35px;
+}
+
+.top-text {
+    display: flex;
+    justify-content: space-between;
+    color: #D5D4D8;
+    font-family:'Inter', sans-serif;    
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+hr {
+    width: 471px;
+    border: 1px solid #C3C6DB;
+}
+
+.total {
+    margin: 10px 35px;
+}
+
+.buttom-text {
+    display: flex;
+    justify-content: space-between;
+    color: #D5D4D8;
+    font-family:'Inter', sans-serif;    
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+.buttom-sub-text {
+    display: flex;
+    justify-content: space-between;
+    color: #D5D4D8;
+    font-family:'Inter', sans-serif;    
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 20px;
+}
+
+#total-amount {
+    margin-top: 10px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 32px;
+    text-align: right;
+    color: #F5F5F5;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+}
+
+.send-btn {
+    width: 473px;
+    height: 44px;
+    background: #3A69D2;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 7px;
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.send-btn:hover {
+    background: #D1D4F4;
+    border: 1px #3A69D2 solid;
+    color: #3A69D2;
+    transition: .2s linear;
+}
+
+.fa-envelope {
+    margin-right: 15px;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+footer {
+    margin: 0;
+    padding: 5px;
+    text-align: center;
+    color: #dbedf0;
+    font-family: 'Karla', sans-serif;
+    font-size: 15px;
+    font-weight: 800;
+}
+
+.fa-github {
+  font-size: 20px;
+  transition: transform 0.3s ease-in-out;
+  color: #fff;
+}
+
+.fa-github:hover {
+  transform: rotate(360deg) scale(1.2);
 }
