Invoice App Functionality added

--- a/style.css
+++ b/style.css
@@ -88,6 +88,38 @@ section {
     line-height: 20px;
 }
 
+.order-items {
+    display: flex;
+    justify-content: space-between;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 10px;
+    
+}
+
+li {
+    text-align: justify;
+    margin-bottom: 15px;
+}
+
+.item-el {    
+    color: #D5D4D8;
+    font-family:'Inter', sans-serif;    
+    font-weight: 700;
+    font-size: 20px;    
+}
+
+.price-el {    
+    color: #D5D4D8;
+    font-family:'Inter', sans-serif;    
+    font-weight: 800;
+    font-size: 20px;    
+}
+
+
 hr {
     width: 471px;
     border: 1px solid #C3C6DB;
